Fix loading vector layers when kzip mangled the paths on saving

We have to substitute the image name with the actual folder we find in the file
, which might be different, because kzip is crap at encodings. But we also
should be careful when comparing the layer's path with what we expect so we don't
double up the path to the file we want to read

BUG:408280